fix vcard title spacing

--- a/view/theme/redbasic/css/style.css
+++ b/view/theme/redbasic/css/style.css
@@ -347,7 +347,8 @@ footer {
 	word-wrap: break-word;
 }
 
-.vcard dl  {
+.vcard dl,
+.vcard .title {
 	margin-top: 10px;
 	margin-bottom: 0px;
 }
